--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en-US"><head>
 	<meta charset="UTF-8">
-	<title>BIRD DOG</title>
+	<title>BROSKI</title>
 	<meta name="robots" content="max-image-preview:large">
 	<link rel="stylesheet" href="css/all.min.css">
 
@@ -1329,7 +1329,7 @@
 
 <body class="home page-template page-template-elementor_canvas page page-id-8 exclusive-addons-elementor elementor-default elementor-template-canvas elementor-kit-7 elementor-page elementor-page-8">
 	<div data-elementor-type="wp-post" data-elementor-id="8" class="elementor elementor-8" data-elementor-post-type="page">
-		<section class="has_eae_slider elementor-section elementor-top-section elementor-element elementor-element-345c9b8 elementor-section-full_width elementor-section-height-default elementor-section-height-default exad-glass-effect-no exad-sticky-section-no" data-id="345c9b8" style="background-image: url(images/bg.png); background-position: center;" data-element_type="section" id="home" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;_ha_eqh_enable&quot;:false}">
+		<section class="has_eae_slider elementor-section elementor-top-section elementor-element elementor-element-345c9b8 elementor-section-full_width elementor-section-height-default elementor-section-height-default exad-glass-effect-no exad-sticky-section-no" data-id="345c9b8" style="background-image: url(images/bg.jpg); background-position: center;" data-element_type="section" id="home" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;_ha_eqh_enable&quot;:false}">
 			<div class="elementor-background-overlay"></div>
 			<div class="elementor-container elementor-column-gap-default">
 				<div class="has_eae_slider elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-874ea25 exad-glass-effect-no exad-sticky-section-no" data-id="874ea25" data-element_type="column">
@@ -1341,12 +1341,12 @@
 									<div class="elementor-widget-wrap elementor-element-populated">
 										<div class="elementor-element elementor-element-6ed3ee8 exad-sticky-section-no exad-glass-effect-no elementor-invisible elementor-widget elementor-widget-ha-gradient-heading happy-addon ha-gradient-heading" data-id="6ed3ee8" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInLeft&quot;}" data-widget_type="ha-gradient-heading.default">
 											<div class="elementor-widget-container">
-												<h2 class="ha-gradient-heading">BIRD</h2>
+												<h2 class="ha-gradient-heading">BROSKI</h2>
 											</div>
 										</div>
 										<div class="elementor-element elementor-element-8dcf0bc exad-sticky-section-no exad-glass-effect-no elementor-invisible elementor-widget elementor-widget-ha-gradient-heading happy-addon ha-gradient-heading" data-id="8dcf0bc" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInLeft&quot;}" data-widget_type="ha-gradient-heading.default">
 											<div class="elementor-widget-container">
-												<h2 class="ha-gradient-heading" style="font-size: 100px;"> DOG </h2>
+												<h2 class="ha-gradient-heading" style="font-size: 100px;"> ON SOL </h2>
 											</div>
 										</div>
 										<div class="elementor-element elementor-element-75f076c exad-sticky-section-no exad-glass-effect-no elementor-invisible elementor-widget elementor-widget-heading" data-id="75f076c" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInLeft&quot;}" data-widget_type="heading.default">
@@ -1948,7 +1948,7 @@
 												<div class="ue_icon_spacing"></div>
 
 												<div class="ue_marq_text_wrap">
-													BIRD DOG
+													BROSKI
 												</div>
 
 											</a>
@@ -2091,7 +2091,7 @@
 																	<div class="ekit-heading elementskit-section-title-wraper text_center   ekit_heading_tablet-   ekit_heading_mobile-">
 																		<h2 class="ekit-heading--title elementskit-section-title">
 																			TOTAL SUPPLY
-																			<br><span>420,690,000 $BIRDOG
+																			<br><span>1,000,000,0000
 																		</span></h2>
 																	</div>
 																</div>
@@ -2231,7 +2231,7 @@
 												</div>
 
 												<div id="uc_unlimited_charts_elementor_382c2e4" class="uc-chart__container">
-													<img src="images/about.jpg" style="margin-top: -117px;" alt="Description of the image">
+													<img src="images/about.png" style="margin-top: -117px;" alt="Description of the image">
 												</div>
 
 
@@ -2451,7 +2451,7 @@
 												<div class="ue_icon_spacing"></div>
 
 												<div class="ue_marq_text_wrap">
-													BIRD DOG
+													BROSKI
 												</div>
 
 											</a>
@@ -2462,7 +2462,7 @@
 												<div class="ue_icon_spacing"></div>
 
 												<div class="ue_marq_text_wrap">
-													BIRD DOG
+													BROSKI
 												</div>
 
 											</a>
@@ -2473,7 +2473,7 @@
 												<div class="ue_icon_spacing"></div>
 
 												<div class="ue_marq_text_wrap">
-													BIRD DOG
+													BROSKI
 												</div>
 
 											</a>
@@ -2575,7 +2575,7 @@
 												<div class="ue_icon_spacing"></div>
 
 												<div class="ue_marq_text_wrap">
-													$BIRDOG
+													$BROSKI
 												</div>
 
 											</a>
@@ -2586,7 +2586,7 @@
 												<div class="ue_icon_spacing"></div>
 
 												<div class="ue_marq_text_wrap">
-													$BIRDOG
+													$BROSKI
 												</div>
 
 											</a>
@@ -2597,7 +2597,7 @@
 												<div class="ue_icon_spacing"></div>
 
 												<div class="ue_marq_text_wrap">
-													$BIRDOG
+													$BROSKI
 												</div>
 
 											</a>
@@ -2792,7 +2792,7 @@
 												<h2 class="elementor-heading-title elementor-size-default">
 													<ul style="list-style: none; padding: 0; margin: 0;">
 
-														<li>• Visit RAYDIUM, which has an SOL to $MATT FURIE swap already loaded. Ensure your wallet is connected to RAYDIUM</li>
+														<li>• Visit RAYDIUM, which has an SOL to $BROSKI swap already loaded. Ensure your wallet is connected to RAYDIUM</li>
 														
 													</ul>
 												</h2>
@@ -2816,12 +2816,12 @@
 									<div class="elementor-widget-wrap elementor-element-populated">
 										<div class="elementor-element elementor-element-a7a1c3b exad-sticky-section-no exad-glass-effect-no elementor-invisible elementor-widget elementor-widget-ha-gradient-heading happy-addon ha-gradient-heading" data-id="a7a1c3b" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInLeft&quot;}" data-widget_type="ha-gradient-heading.default">
 											<div class="elementor-widget-container">
-												<h2 class="ha-gradient-heading">BIRD</h2>
+												<h2 class="ha-gradient-heading">BROSKI</h2>
 											</div>
 										</div>
 										<div class="elementor-element elementor-element-b37c230 exad-sticky-section-no exad-glass-effect-no elementor-invisible elementor-widget elementor-widget-ha-gradient-heading happy-addon ha-gradient-heading" data-id="b37c230" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInLeft&quot;}" data-widget_type="ha-gradient-heading.default">
 											<div class="elementor-widget-container">
-												<h2 class="ha-gradient-heading"> DOG
+												<h2 class="ha-gradient-heading"> ON SOL
 												</h2>
 											</div>
 										</div>
