--- a/index.html
+++ b/index.html
@@ -1386,9 +1386,9 @@
 													}
 												</style>
 												<p style="font-size: large; font-weight: 600; color: white;">
-													Who Is BIRD DOG?
+													Who is broski?
 												</p>
-												<h2 class="elementor-heading-title elementor-size-default" style="line-height: 3.5vh;">The 5th member of Pepe's gang of roommates, famously known as the Boy's Club. Created by Matt Furie himself, BIRD DOG is a character inspired by the artist's younger self. Funny enough, BIRD DOG is Matt Furies favorite character!
+												<h2 class="elementor-heading-title elementor-size-default" style="line-height: 3.5vh;">Broski is here to rock,with his smile and agression he is going to save his bros!
 												</h2>
 											</div>
 										</div>
@@ -1427,7 +1427,7 @@
 																				</style>
 
 																				<div class="uc-liquid-button-wrapper">
-																					<a id="uc_super_fun_liquid_button_elementor_c74a2d9" class="uc-liquid-button" href="https://raydium.io/swap" target="_blank" data-margin="30" data-color1="#6600f4" data-color2="#d66636" data-color3="#f43500">
+																					<a id="uc_super_fun_liquid_button_elementor_c74a2d9" class="uc-liquid-button" href="https://raydium.io/swap/?utm_source=phantom&utm_medium=list&inputMint=sol&outputMint=65Pk5RiiNfB6cJ7mQchgkEBxx3AZaKhxmfyfrag4pump" target="_blank" data-margin="30" data-color1="#6600f4" data-color2="#d66636" data-color3="#f43500">
 																						BUY NOW
 																					</a>
 																				</div>
@@ -1465,7 +1465,7 @@
 																</style>
 
 																<div class="uc-liquid-button-wrapper">
-																	<a id="uc_super_fun_liquid_button_elementor_159a1b1" class="uc-liquid-button" href="https://www.dextools.io/app/en/solana/pair-explorer/gC1hnvV3AXme4LiSSF9bZgycmvBEzk5xYLMg6k37TxM?t=1718462870482" target="_blank" data-margin="30" data-color1="#6600f4" data-color2="#d66636" data-color3="#f43500">
+																	<a id="uc_super_fun_liquid_button_elementor_159a1b1" class="uc-liquid-button" href="https://dexscreener.com/solana/aya5bi1dpq5mssmfvfynkxey2jxch2waubk3xbh8xirh" target="_blank" data-margin="30" data-color1="#6600f4" data-color2="#d66636" data-color3="#f43500">
 																		Chart
 																	</a>
 																</div>
@@ -1787,7 +1787,7 @@
 																</style>
 																<div class="elementor-social-icons-wrapper elementor-grid">
 																	<span class="elementor-grid-item">
-																		<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-grow elementor-repeater-item-caafb84" href="https://T.me/BirdogSol" target="_blank">
+																		<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-grow elementor-repeater-item-caafb84" href="https://t.me/broskisol" target="_blank">
 																			<span class="elementor-screen-only">Telegram-plane</span>
 																			<svg class="e-font-icon-svg e-fab-telegram-plane" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg">
 																				<path d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z">
@@ -1795,12 +1795,12 @@
 																			</svg> </a>
 																	</span>
 																	<span class="elementor-grid-item">
-																		<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-grow elementor-repeater-item-caafb84" href="https://www.dextools.io/app/en/solana/pair-explorer/gC1hnvV3AXme4LiSSF9bZgycmvBEzk5xYLMg6k37TxM?t=1718462870482" target="_blank">
+																		<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-grow elementor-repeater-item-caafb84" href="https://www.dextools.io/app/en/solana/pair-explorer/AYa5bi1dPQ5MSsmfVFYnKXEY2JxcH2WAUbK3Xbh8XirH?t=1719087389084" target="_blank">
 																			<span class="elementor-screen-only">Telegram-plane</span>
 																			<img src="images/dex.png" width="22"> </a>
 																	</span>
 																	<span class="elementor-grid-item">
-																		<a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-animation-grow elementor-repeater-item-63a92ea" href="https://x.com/birdDogonSol" target="_blank">
+																		<a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-animation-grow elementor-repeater-item-63a92ea" href="https://x.com/broskisolana/status/1804609605454221756?s=46" target="_blank">
 																			<span class="elementor-screen-only">X-twitter</span>
 																			<svg class="e-font-icon-svg e-fab-x-twitter" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
 																				<path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z">
@@ -2257,7 +2257,7 @@
 												<div class="ekit-wid-con">
 													<div class="ekit-heading elementskit-section-title-wraper text_center   ekit_heading_tablet-   ekit_heading_mobile-">
 														<h2 class="ekit-heading--title elementskit-section-title">
-															5pfe6Zsm4u6sQS9sx9VYcJFc8UqJbWkwyftBdNavTo79</h2>
+															65Pk5RiiNfB6cJ7mQchgkEBxx3AZaKhxmfyfrag4pump</h2>
 													</div>
 												</div>
 											</div>
@@ -2302,7 +2302,7 @@
 
 												<div class="uc-liquid-button-wrapper">
 													
-													<a id="uc_super_fun_liquid_button_elementor_6c024b7" class="uc-liquid-button" href="https://birdeye.so/token/5pfe6Zsm4u6sQS9sx9VYcJFc8UqJbWkwyftBdNavTo79?chain=solana" target="_blank" data-margin="30" data-color1="#6600f4" data-color2="#d66636" data-color3="#f43500">
+													<a id="uc_super_fun_liquid_button_elementor_6c024b7" class="uc-liquid-button" href="https://dexscreener.com/solana/aya5bi1dpq5mssmfvfynkxey2jxch2waubk3xbh8xirh" target="_blank" data-margin="30" data-color1="#6600f4" data-color2="#d66636" data-color3="#f43500">
 														DEXSCREENER
 													</a>
 												</div>
@@ -2342,7 +2342,7 @@
 												</style>
 
 												<div class="uc-liquid-button-wrapper">
-													<a id="uc_super_fun_liquid_button_elementor_7c4e1dc" class="uc-liquid-button" href="https://www.dextools.io/app/en/solana/pair-explorer/gC1hnvV3AXme4LiSSF9bZgycmvBEzk5xYLMg6k37TxM?t=1718462870482" target="_blank" data-margin="30" data-color1="#6600f4" data-color2="#d66636" data-color3="#f43500">
+													<a id="uc_super_fun_liquid_button_elementor_7c4e1dc" class="uc-liquid-button" href="https://www.dextools.io/app/en/solana/pair-explorer/AYa5bi1dPQ5MSsmfVFYnKXEY2JxcH2WAUbK3Xbh8XirH?t=1719087389084" target="_blank" data-margin="30" data-color1="#6600f4" data-color2="#d66636" data-color3="#f43500">
 														DexTools
 													</a>
 												</div>
@@ -2856,7 +2856,7 @@
 																</style>
 
 																<div class="uc-liquid-button-wrapper">
-																	<a id="uc_super_fun_liquid_button_elementor_ddbabac" class="uc-liquid-button" href="https://raydium.io/swap" target="_blank" data-margin="30" data-color1="#6600f4" data-color2="#d66636" data-color3="#f43500">
+																	<a id="uc_super_fun_liquid_button_elementor_ddbabac" class="uc-liquid-button" href="https://raydium.io/swap/?utm_source=phantom&utm_medium=list&inputMint=sol&outputMint=65Pk5RiiNfB6cJ7mQchgkEBxx3AZaKhxmfyfrag4pump" target="_blank" data-margin="30" data-color1="#6600f4" data-color2="#d66636" data-color3="#f43500">
 																		BUY NOW
 																	</a>
 																</div>
@@ -2894,7 +2894,7 @@
 												</style>
 
 												<div class="uc-liquid-button-wrapper">
-													<a id="uc_super_fun_liquid_button_elementor_8592de4" class="uc-liquid-button" href="https://dexscreener.com/solana/gc1hnvv3axme4lissf9bzgycmvbezk5xylmg6k37txm" target="_blank" data-margin="30" data-color1="#6600f4" data-color2="#d66636" data-color3="#f43500">
+													<a id="uc_super_fun_liquid_button_elementor_8592de4" class="uc-liquid-button" href="https://dexscreener.com/solana/aya5bi1dpq5mssmfvfynkxey2jxch2waubk3xbh8xirh" target="_blank" data-margin="30" data-color1="#6600f4" data-color2="#d66636" data-color3="#f43500">
 														Dexscreener
 													</a>
 												</div>
@@ -2909,7 +2909,7 @@
 											<div class="elementor-widget-container">
 												<div class="elementor-social-icons-wrapper elementor-grid">
 													<span class="elementor-grid-item">
-														<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-grow elementor-repeater-item-caafb84" href="https://T.me/BirdogSol" target="_blank">
+														<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-grow elementor-repeater-item-caafb84" href="https://t.me/broskisol" target="_blank">
 															<span class="elementor-screen-only">Telegram-plane</span>
 															<svg class="e-font-icon-svg e-fab-telegram-plane" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg">
 																<path d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z">
@@ -2917,7 +2917,7 @@
 															</svg> </a>
 													</span>
 													<span class="elementor-grid-item">
-														<a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-animation-grow elementor-repeater-item-63a92ea" href="https://x.com/birdDogonSol" target="_blank">
+														<a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-animation-grow elementor-repeater-item-63a92ea" href="https://x.com/broskisolana/status/1804609605454221756?s=46" target="_blank">
 															<span class="elementor-screen-only">X-twitter</span>
 															<svg class="e-font-icon-svg e-fab-x-twitter" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
 																<path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z">
